<resources>
    <!--    General     -->
    <string name="app_name">Codewars</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_network_connection">Please verify your internet connection</string>

    <!--    Home     -->
    <string name="search_by_username">Search by username</string>
    <string name="search">Search</string>
    <string name="user_not_found">User \"%1$s\" not found</string>
    <string name="generic_error_message">An unexpected error occurred</string>
    <string name="rank">Rank</string>
    <string name="best_language_label">Best language</string>
    <string name="best_language">%1$s\n(%2$d pts)</string>
    <string name="points">Points</string>
    <string name="honor">Honor</string>
    <string name="unavailable">Unavailable</string>
    <string name="sort_by_honor">Sort by honor</string>
    <string name="sort_by_recent">Sort by recent</string>
    <string name="sort_options">Sort options</string>
    <string name="user_list_empty_title">List of users is empty</string>
    <string name="user_list_empty">Please use the search button on top bar to find a user</string>

    <!--    Challenges     -->
    <string name="completed_challenges">Completed challenges</string>
    <string name="authored_challenges">Authored challenges</string>
    <string name="empty_list">Empty list</string>
    <string name="loading">Loading</string>
    <string name="end_of_list">All data were fetched</string>
    <string name="try_again">Try again</string>
    <string name="challenge_not_found">The selected challenge was not found</string>
</resources>